Build a Fraction: Shapes: When dropping a container in an incorrect collection box, do not move to exactly overlap a container that is already centered in the play area.
Switched to use a "level selection screen" button instead of a back button for build a fraction and fraction matcher.
Build a Fraction: Shapes: Fixed: If the "undo" button is pressed for a "double container" that is in the collection box, and it flies back to the floating panel it does not recollapse to single container.
Build a Fraction: Shapes: Fixed: When a "double container" is dragged over the collection box with the incorrect answer and released, it pops back to where the "minus" sign interferes with the collection boxes
Build a Fraction: Shapes: Made the container node go to the play area if it is empty, otherwise go to the toolbox
# 1.00.34 (66906) Aug 13, 2012
Build a Fraction: Numbers: Fixed: Fraction skeleton cannot be dragged out of toolbox after being ejected from a collection box
Build a Fraction: Switched from blue "split" button to yellow "undo" button
Build a Fraction: Shapes: Fixed: When a new container comes out (after completing a target), it does not go to the same "centered" place as the original one
# 1.00.33 (66874) Aug 12, 2012
Build a Fraction: Numbers: Center the initial fraction skeleton and floating panel under the "Level #" heading
Build a Fraction: Shapes: Center the initial container and floating panel under the "Level #" heading
Build a Fraction: Fixed: Dragging on back button in a level makes buggy looking effects
Build a Fraction: Shapes: Clear divisions from a container when ejected from a collection box
# 1.00.32 (66858) Aug 10, 2012
Build a Fraction: Shapes: Possible solution for bugs such as pie slices flying to the wrong location, and exceptions
# 1.00.31 (66849) Aug 10, 2012
Build a Fraction: Shapes: Decreased vertical height of collection boxes by 5% and spaced them out further
# 1.00.30 (66845) Aug 10, 2012